Various Minor Text Fixes (#12)
* New Quote

also added quotation marks to the last quote because every other one has them

* Adding More Location Names

* Updated Authors

* Fixed Typo

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,7 +18,7 @@ BManx2000 (2011) - contributed code thru forums
 Callum Davies (2012) - contributed code and Linux install instructions thru forums
 calrogman (2013) - direct contributor to main project
 Carlos Gustavos / blomkvist (2010-2015) - direct contributor to main project
-Chris Johnson / grundee (2007-2008) - did most of the coding when the project was revived in 2007 and listed as current maintainer
+Chris Johnson / grundee (2007-2008) - did most of the coding when the project was revived in 2007 and listed as retired maintainer
 Christian Sergelius / cribozai (2011) - contributed Linux install instructions thru forums
 Ciprian Ilies / Addictgamer (2012-2013) - direct contributor to main project
 coronelniel (2011) - direct contributor to main project
@@ -35,7 +35,7 @@ Ighalli (2008) - direct contributor to main project
 infernozeus (2011) - contributed code thru forums
 Janus / brettflan (2010) - direct contributor to main project
 jcarter2014 (2014) - direct contributor to main project
-Jonathan Stickles / Jonathan S. Fox (2007-2014) - maintainer of the game who revived the project and put out official releases
+Jonathan Stickles / Jonathan S. Fox (2007-2014, 2023) - maintainer of the game who revived the project and put out official releases
 KA101 (2013) - contributed maps
 Kamal Sadek (2015) - Probably did something
 Kay12 (2011-2013) - contributed code and bug reports thru forums
